--- a/g/index.html
+++ b/g/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div class="ffg">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 </body>
 </html>
