--- a/g/index.html
+++ b/g/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div class="ffg">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="rr"></div>
+        <div class="rr"></div>
+        <div class="rr"></div>
     </div>
 </body>
 </html>
